# mapping-test-platform

./: .gitmodules.bkp  README.md
catkin_ws/.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
catkin_ws/devel/.private/motor_ctrl/: .catkin
catkin_ws/devel/.private/realsense2_camera/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/.private/realsense2_description/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/include/realsense2_camera/: DeviceInfo.h  DeviceInfoRequest.h  DeviceInfoResponse.h  Extrinsics.h  IMUInfo.h  Metadata.h
catkin_ws/devel/lib/motor_ctrl/: motor_ctrl_node.py
catkin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  motor_ctrl.pc  realsense2_camera.pc  realsense2_description.pc
catkin_ws/logs/motor_ctrl/: build.check.000.log.stderr
catkin_ws/logs/realsense2_camera/: build.make.000.log.stderr
catkin_ws/src/goliath_config/: CMakeLists.txt  package.xml
catkin_ws/src/goliath_config/config/: teleop_logitech.yaml
catkin_ws/src/goliath_config/launch/: main.launch  test_map.launch  view_image.launch
catkin_ws/src/image/: CMakeLists.txt  package.xml
catkin_ws/src/image/launch/: send_image.launch
catkin_ws/src/image/src/: image_node.cpp
catkin_ws/src/teleop/: CMakeLists.txt  package.xml
scripts/: builder.sh  env_ctrl.sh  env_pi.sh  install_packages.sh
(+59 files in other folders)
